--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prettier": "prettier . --check",
-    "prettier:fix": "prettier . --write"
+    "prettier:fix": "prettier . --write",
+    "prepare": "cd .. && husky client/.husky"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
