--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,45 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=dev
+    depends_on:
+      - version
+
+  # ---- VERSION MICROSERVICE -----
+  version:
+    build:
+      context: ./server/version
+    ports:
+      - "8081:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+    depends_on:
+      - version-postgres
+      - version-mongo
+
+  version-postgres:
+    image: postgres:15-alpine
+    restart: always
+    environment:
+      POSTGRES_DB: versiondb
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5433:5432"
+    volumes:
+      - version-postgres-data:/var/lib/postgresql/data
+
+  version-mongo:
+    image: mongo:6.0
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=strong
+      - MONGO_INITDB_DATABASE=versiondb
+    ports:
+      - "27018:27017"
+    volumes:
+      - version-mongo-data:/data/db
+
+volumes:
+  version-postgres-data:
+  version-mongo-data:
