--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
+    "tailwind-merge": "^3.3.0",
     "typescript": "^5"
   }
 }
