--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,13 @@ services:
 
   # ---- CLIENT -----
   client:
+    container_name: client
     build:
       context: ./client
     ports:
       - "3000:3000"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - version
 
@@ -16,17 +17,23 @@ services:
     build:
       context: ./server/api-gateway
     env_file:
-      - ./.env.dev
+      - ./.env
     restart: always
     container_name: api-gateway
     depends_on:
       - keycloak
+      - recipe
+      - version
     ports:
       - "8080:8080"
     environment:
-      SPRING_CLOUD_GATEWAY_ROUTES_0_ID: users
-      SPRING_CLOUD_GATEWAY_ROUTES_0_URI: http://localhost:8082
-      SPRING_CLOUD_GATEWAY_ROUTES_0_PREDICATES_0: Path=/users
+      SPRING_CLOUD_GATEWAY_ROUTES_0_ID: version-control-system
+      SPRING_CLOUD_GATEWAY_ROUTES_0_URI: http://version:8080
+      SPRING_CLOUD_GATEWAY_ROUTES_0_PREDICATES_0: Path=/vcs/**
+
+      SPRING_CLOUD_GATEWAY_ROUTES_1_ID: recipes
+      SPRING_CLOUD_GATEWAY_ROUTES_1_URI: http://recipe:8080
+      SPRING_CLOUD_GATEWAY_ROUTES_1_PREDICATES_0: Path=/recipes/**
 
       APP_SECURITY_CORS_ALLOWED_ORIGINS_0: localhost
       APP_SECURITY_CORS_ALLOWED_ORIGINS_1: nebeklion.com
@@ -36,58 +43,70 @@ services:
 
   # ---- RECIPE MICROSERVICE -----
   recipe:
+    container_name: recipe
     build:
-      context: ./server/version
+      context: ./server/recipe
+    environment:
+      - RECIPE_POSTGRES_URL_HOST=postgres
+      - RECIPE_POSTGRES_URL_PORT=5432
     ports:
       - "8081:8080"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - postgres
 
   # ---- VERSION MICROSERVICE -----
   version:
+    container_name: version
+    environment:
+      - VERSION_POSTGRES_URL_HOST=postgres
+      - VERSION_POSTGRES_URL_PORT=5432
+      - VERSION_MONGO_URL_HOST=mongo
+      - VERSION_MONGO_URL_PORT=27017
     build:
       context: ./server/version
     ports:
       - "8082:8080"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - postgres
       - mongo
 
   # ---- POSTGRESQL -----
   postgres:
+    container_name: postgres
     image: postgres:17
     restart: always
     env_file:
-      - ./.env.dev
+      - ./.env
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
 
   # ---- MONGO DB -----
   mongo:
+    container_name: mongo
     image: mongo:6.0
     restart: always
     env_file:
-      - ./.env.dev
+      - ./.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - ./mongo-data:/data/db
 
   # ---- KEYCLOACK ----
   keycloak:
     image: quay.io/keycloak/keycloak:26.2.4
     container_name: keycloak
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - postgres
     restart: always
@@ -104,9 +123,9 @@ services:
       - "8443:8443"
     volumes:
       - ./config/realm-export.json:/opt/keycloak/data/import/realm.json
-      - ./keycloak_data:/opt/keycloak/data
+      - ./keycloak-data:/opt/keycloak/data
 
 volumes:
   postgres-data:
   mongo-data:
-  keycloak_data:
+  keycloak-data:
