add compose file (#21)
* [client] specify service details in compose file

* [version] specify service details in compose file

* [RECIPE] Add recipe service related parts to compose.yaml

Also:
- Changes the expected port of postgres in application-dev.yml for recipe

* add example .env file

* [server] add compose-dev

* add realm export

* [version] use env variables

* fix compose issues

* [app] update docker compose

---------

Co-authored-by: Subfly <alitahasubfly@gmail.com>
Co-authored-by: Erhan Varlik <erhan.varlik@tum.de>

--- a/server/version/src/main/resources/application.yml
+++ b/server/version/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-spring.application.name: version
+spring:
+  application:
+    name: version
+  datasource:
+    url: jdbc:postgresql://${VERSION_POSTGRES_URL_HOST}:${VERSION_POSTGRES_URL_PORT}/${VERSION_POSTGRES_DB_NAME}
+    username: ${VERSION_POSTGRES_USER}
+    password: ${VERSION_POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    mongodb:
+      uri: mongodb://${VERSION_MONGO_USER}:${VERSION_MONGO_PASSWORD}@${VERSION_MONGO_URL_HOST}:${VERSION_MONGO_URL_PORT}/${VERSION_MONGO_DB_NAME}
