--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Images
 
 on:
   push:
-    branches: [main] # Only run on main branch; adjust as needed
+    branches: [main]
     paths:
       - 'client/**'
       - 'server/**'
