--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
 
       - name: Parse service info
         id: vars
