add required recipe service before contoller

--- a/server/recipe/src/main/resources/application.yml
+++ b/server/recipe/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  vcs:
+    service:
+      url: http://vcs-service:8080
+
