--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -38,7 +38,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'pnpm'
+          
+      - name: Setup pnpm
+        if: steps.vars.outputs.type == 'node'
+        uses: pnpm/action-setup@v3
+        with:
+            version: 10  
 
       - name: Build Next.js Client with pnpm
         if: steps.vars.outputs.type == 'node'
