change pnpm installation

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -32,12 +32,6 @@ jobs:
           echo "name=$name" >> $GITHUB_OUTPUT
           echo "type=$type" >> $GITHUB_OUTPUT
           echo "path=$path" >> $GITHUB_OUTPUT
-          
-      - name: Setup pnpm
-        if: steps.vars.outputs.type == 'node'
-        uses: pnpm/action-setup@v3
-        with:
-            version: 10  
             
       - name: Setup Node.js (for pnpm)
         if: steps.vars.outputs.type == 'node'
@@ -45,6 +39,10 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+
+      - name: Install pnpm
+        if: steps.vars.outputs.type == 'node'
+        run: npm install -g pnpm
 
       - name: Build Next.js Client with pnpm
         if: steps.vars.outputs.type == 'node'
