--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -2,7 +2,6 @@ name: Build and Push Docker Images
 
 on:
   push:
-    branches: [main]
     paths:
       - 'client/**'
       - 'server/**'
@@ -69,6 +68,7 @@ jobs:
   build:
     name: Build and Push Docker Images
     needs: test
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
