[version] add kubernetes deployment

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,59 @@
-# Env specification
-NODE_ENV=
-SPRING_PROFILES_ACTIVE=
+# Environment
+NODE_ENV=development                 # Node.js environment mode, e.g., development, production. Affects logging, debugging, optimizations.
+SPRING_PROFILES_ACTIVE=dev           # Active Spring Boot profile; controls which configuration files and beans are loaded (dev, prod, test, etc.).
 
-# Postgres settings
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_URL_HOST=
-POSTGRES_URL_PORT=
+# Postgres global settings (for default Postgres connections)
+POSTGRES_USER=postgres_user          # Username to connect to PostgreSQL server.
+POSTGRES_PASSWORD=postgres_password  # Password for the above user.
+POSTGRES_URL_HOST=localhost          # Hostname or IP where the Postgres server is running.
+POSTGRES_URL_PORT=5432               # Port on which the Postgres server listens (default: 5432).
+POSTGRES_DB=postgres_db_name         # Default database name to connect to in Postgres.
 
-# Mongo settings
-MONGO_USER=
-MONGO_PASSWORD=
-MONGO_URL_HOST=
-MONGO_URL_PORT=
+# MongoDB global settings (for default MongoDB connections)
+MONGO_USER=mongo_user                # MongoDB username used for authentication.
+MONGO_PASSWORD=mongo_password        # Password for the MongoDB user.
+MONGO_DB=mongo_db_name               # Default MongoDB database name.
+MONGO_URL_HOST=localhost             # Hostname or IP where the MongoDB server is running.
+MONGO_URL_PORT=27017                 # Port on which MongoDB listens (default: 27017).
 
-# Keycloak DB connection
-KC_DB=
-KC_DB_URL_HOST=
-KC_DB_URL_PORT=
-KC_DB_DATABASE=
-KC_DB_USERNAME=
-KC_DB_PASSWORD=
-KC_DB_SCHEMA=
+# Keycloak Database connection settings
+KC_DB=postgresql                     # Type of database Keycloak uses (postgresql or mysql).
+KC_DB_URL_HOST=localhost             # Hostname or IP for Keycloak's database server.
+KC_DB_URL_PORT=5432                  # Port for Keycloak's database server.
+KC_DB_DATABASE=postgres_db_name      # Name of the Keycloak database.
+KC_DB_USERNAME=postgres_user         # Username to access Keycloak's database.
+KC_DB_PASSWORD=postgres_password     # Password for the above user.
+KC_DB_SCHEMA=public                  # Schema used by Keycloak in the database (often "public" in Postgres).
 
-# Keycloak admin bootstrap
-KC_BOOTSTRAP_ADMIN_USERNAME=
-KC_BOOTSTRAP_ADMIN_PASSWORD=
+# Keycloak admin bootstrap credentials
+KC_BOOTSTRAP_ADMIN_USERNAME=admin    # Initial admin username for Keycloak to bootstrap the admin account.
+KC_BOOTSTRAP_ADMIN_PASSWORD=admin123 # Initial admin password for Keycloak admin account.
 
-CLIENT_ID=
-CLIENT_SECRET=
+# OAuth Client credentials (for authenticating OAuth clients with Keycloak)
+CLIENT_ID=my-client-id                # OAuth client identifier registered in Keycloak.
+CLIENT_SECRET=my-client-secret        # OAuth client secret key used during client authentication.
 
-# Recipe Microservice
-RECIPE_POSTGRES_URL_HOST=
-RECIPE_POSTGRES_URL_PORT=
-RECIPE_POSTGRES_DB_NAME=
+# Recipe Microservice Postgres settings (Postgres database connection for the Recipe microservice)
+RECIPE_POSTGRES_URL_HOST=localhost
+RECIPE_POSTGRES_URL_PORT=5432
+RECIPE_POSTGRES_USER=postgres_user
+RECIPE_POSTGRES_PASSWORD=postgres_password
+RECIPE_POSTGRES_DB_NAME=postgres_db_name
 
-# Version Microservice
-VERSION_POSTGRES_URL_HOST=
-VERSION_POSTGRES_URL_PORT=
-VERSION_POSTGRES_DB_NAME=
+# Version Microservice Postgres settings (Postgres database connection for the Version microservice)
+VERSION_POSTGRES_URL_HOST=localhost
+VERSION_POSTGRES_URL_PORT=5432
+VERSION_POSTGRES_USER=postgres_user
+VERSION_POSTGRES_PASSWORD=postgres_password
+VERSION_POSTGRES_DB_NAME=postgres_db_name
 
-VERSION_MONGO_URL_HOST=
-VERSION_MONGO_URL_PORT=
-VERSION_MONGO_DB_NAME=
+# Version Microservice MongoDB settings (MongoDB connection details for Version microservice)
+VERSION_MONGO_URL_HOST=localhost
+VERSION_MONGO_URL_PORT=27017
+VERSION_MONGO_USER=mongo_user
+VERSION_MONGO_PASSWORD=mongo_password
+VERSION_MONGO_DB_NAME=mongo_db_name
+
+# Version Microservice connection settings (where to reach the Version microservice API)
+VERSION_SERVICE_HOST=version         # Hostname or service name of the Version microservice (could be a Docker container name or DNS).
+VERSION_SERVICE_PORT=8080             # Port on which the Version microservice listens.
