--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,9 +67,11 @@ services:
     environment:
       - VERSION_POSTGRES_URL_HOST=${VERSION_POSTGRES_URL_HOST}
       - VERSION_POSTGRES_URL_PORT=${VERSION_POSTGRES_URL_PORT}
+      - VERSION_POSTGRES_DB_NAME=${VERSION_POSTGRES_DB_NAME}
+      - VERSION_POSTGRES_USER=${VERSION_POSTGRES_USER}
+      - VERSION_POSTGRES_PASSWORD=${VERSION_POSTGRES_PASSWORD}
       - VERSION_MONGO_URL_HOST=${VERSION_MONGO_URL_HOST}
       - VERSION_MONGO_URL_PORT=${VERSION_MONGO_URL_PORT}
-      - VERSION_POSTGRES_DB_NAME=${VERSION_POSTGRES_DB_NAME}
     build:
       context: ./server/version
     ports:
