--- a/server/version/src/main/resources/application.yml
+++ b/server/version/src/main/resources/application.yml
@@ -14,4 +14,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   data:
     mongodb:
-      uri: mongodb://${VERSION_MONGO_USER}:${VERSION_MONGO_PASSWORD}@${VERSION_MONGO_URL_HOST}:${VERSION_MONGO_URL_PORT}/${VERSION_MONGO_DB_NAME}
+      uri: mongodb://${VERSION_MONGO_USER}:${VERSION_MONGO_PASSWORD}@${VERSION_MONGO_URL_HOSTS}/${VERSION_MONGO_DB_NAME}?replicaSet=${VERSION_MONGO_REPLICA_SET}
+
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health,info
