[ci/cd] add manual trigger of workflows

--- a/.github/workflows/recipe-ci-cd.yml
+++ b/.github/workflows/recipe-ci-cd.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [main]
     paths:
-      - 'recipe/**'
+      - 'server/recipe/**'
       - 'helm/recipe/**'
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
