--- a/.github/workflows/version-ci-cd.yml
+++ b/.github/workflows/version-ci-cd.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [main]
     paths:
-      - 'version/**'
+      - 'server/version/**'
       - 'helm/version/**'
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
