--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "prepare": "cd .. && husky client/.husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,24 +22,29 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.50.1",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.0.1",
     "eslint": "^9",
-    "@eslint/eslintrc": "^3",
     "eslint-config-next": "15.3.2",
+    "@eslint/eslintrc": "^3",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
-    "husky": "^9.1.7",
-    "prettier": "^3.5.3",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "@tailwindcss/postcss": "^4",
     "tailwind-merge": "^3.3.0",
+    "prettier": "^3.5.3",
+    "husky": "^9.1.7",
     "typescript": "^5"
   }
 }
