--- a/server/version/src/main/resources/application.yml
+++ b/server/version/src/main/resources/application.yml
@@ -22,7 +22,13 @@ management:
       probes:
         enabled: true
       show-details: always
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,prometheus
