--- a/.github/workflows/api-gateway-ci-cd.yml
+++ b/.github/workflows/api-gateway-ci-cd.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   test:
-    name: Tet
+    name: Test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -38,6 +38,7 @@ jobs:
 
   build:
     name: Build and Push Docker Images
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: test
 
@@ -66,7 +67,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=latest
+            type=raw,value=latest,enable={{is_default_branch}}
             type=sha
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
@@ -84,6 +85,7 @@ jobs:
 
   deploy:
     name: Deploy to Rancher with Helm
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
 
