--- a/helm/keycloak-spi/values.yaml
+++ b/helm/keycloak-spi/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/aet-devops25/team-breaking-build/server/api-gateway
+  repository: ghcr.io/aet-devops25/team-breaking-build/server/keycloak-service
   tag: latest
 
 serviceAccount:
@@ -53,6 +53,6 @@ readinessProbe:
 
 envFrom:
   - configMapRef:
-      name: recipefy-gateway-config
+      name: recipefy-config
   - secretRef:
-      name: recipefy-gateway-secret
+      name: keycloak-realms-credentials
