--- a/server/keycloak/Dockerfile
+++ b/server/keycloak/Dockerfile
@@ -1,19 +1,10 @@
-FROM gradle:8.7-jdk21 AS builder
-
-WORKDIR /app
-
-COPY settings.gradle build.gradle ./
-
-COPY src ./src
-
-RUN gradle --no-daemon clean bootJar
+FROM openjdk:21-jdk-slim-bullseye AS build
+WORKDIR /src
+COPY . .
+RUN ./gradlew --no-daemon clean bootJar
 
 FROM eclipse-temurin:21-jre-jammy
-
 WORKDIR /app
-
 COPY --from=build /src/build/libs/keycloak.jar /app/keycloak.jar
-
 EXPOSE 8080
-
 ENTRYPOINT ["java", "-jar", "keycloak.jar"]
