--- a/.github/workflows/keycloak-ci-cd.yml
+++ b/.github/workflows/keycloak-ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest
             type=sha
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
