[GENAI] Add config and update main runner. Also update example env file and requirements

--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -1,11 +1,23 @@
-uvicorn[standard]
+# Core dependencies
+fastapi==0.115.14
+uvicorn[standard]==0.35.0
+python-dotenv==1.1.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+loguru==0.7.3
 
-langchain>=0.1.0
-langchain-community
-langchain-openai
-langchain-text-splitters
+# LangChain and school's LLM
+langchain==0.3.26
+langchain-community==0.3.26
+langchain-ollama==0.3.3
 
-chromadb
+# Vector databases
+weaviate-client==4.15.4
 
-unstructured
-python-dotenv
+# HTTP client for recipe service integration
+httpx==0.28.1
+
+# Testing
+pytest==8.4.1
+pytest-asyncio==1.0.0
+pytest-cov==6.2.1
