[GENAI] Simplified the generative ai structure. Everything works locally. Minimal adjustments left for deployment.

--- a/genai/env.example
+++ b/genai/env.example
@@ -1,21 +1,9 @@
-# GenAI Service Environment Configuration
+# GenAI Recipe Service Environment Configuration
 
 # LLM Configuration
-LLM_BASE_URL=http://localhost:11434
-LLM_API_KEY=your_llm_api_key_here
-LLM_CHAT_MODEL=llama3
-LLM_EMBEDDING_MODEL=llama3
-
-# Vector Store Configuration (Weaviate)
-WEAVIATE_URL=http://localhost:8080
-WEAVIATE_API_KEY=your_weaviate_api_key_here
-WEAVIATE_INDEX_NAME=Recipe
-
-# Recipe Service Configuration
-RECIPE_SERVICE_URL=http://localhost:8081
+OPEN_WEBUI_API_KEY=your_api_key_here
+LLM_BASE_URL=your_base_url_here
 
 # Application Configuration
-APP_HOST=0.0.0.0
-APP_PORT=8000
 DEBUG=false
 LOG_LEVEL=INFO
