[GENAI] Bugfixes, secrets improvement, change of id stroing style hence the schema

--- a/genai/env.example
+++ b/genai/env.example
@@ -1,8 +1,10 @@
 # GenAI Recipe Service Environment Configuration
 
 # LLM Configuration
-OPEN_WEBUI_API_KEY=your_api_key_here
-LLM_BASE_URL=your_base_url_here
+LLM_MODEL=your_model_here
+LLM_TEMPERATURE=your_temperature_here
+LLM_MODEL=your_llm_model_here
+LLM_TEMPERATURE=temperature_between_0.0_and_1.0
 
 # Application Configuration
 DEBUG=false
