fix loki logs and add grafana charts

--- a/helm/alloy/alloy-settings.config
+++ b/helm/alloy/alloy-settings.config
@@ -3,20 +3,68 @@ logging {
     format = "logfmt"
 }
 
-# Discover only the namespace we’re allowed to read.
 discovery.kubernetes "pods_ns" {
     role       = "pod"
     namespaces = ["team-breaking-build"]
 }
 
-# ---- LOGS --------------------------------------------------------------
-loki.source.kubernetes "pods" {
-    targets    = discovery.kubernetes.pods_ns.targets
+discovery.relabel "pods_ns" {
+    targets = discovery.kubernetes.pods_ns.targets
+
+    rule {
+      action = "replace"
+      target_label = "log_type"
+      replacement = "pod"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_pod_container_name"]
+      target_label  = "container"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_pod_container_id"]
+      target_label  = "container_id"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_pod_node_name"]
+      target_label  = "host"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_pod_name"]
+      target_label  = "pod"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_pod_uid"]
+      target_label  = "pod_id"
+    }
+
+    rule {
+      action = "labelmap"
+      regex = "__meta_kubernetes_pod_label_(.*)"
+      replacement = "${1}"
+    }
+}
+
+local.file_match "pods_ns" {
+    path_targets = discovery.relabel.pods_ns.output
+}
+
+loki.source.file "pods_ns" {
+    targets = local.file_match.pods_ns.targets
+    forward_to = [loki.process.pods_ns.receiver]
+}
+
+loki.process "pods_ns" {
     forward_to = [loki.write.local.receiver]
+    stage.cri { }
 }
 
 loki.write "local" {
     endpoint {
-        url = "http://loki-gateway.team-breaking-build.svc.cluster.local/loki/api/v1/push"
+        url = "http://loki.team-breaking-build.svc.cluster.local:3100/loki/api/v1/push"
     }
 }
