[version] add service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -96,7 +96,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
   # ---- MONGO DB -----
   mongo:
@@ -112,7 +112,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./mongo-data:/data/db
+      - mongo-data:/data/db
 
   # ---- KEYCLOACK ----
   keycloak:
@@ -149,3 +149,7 @@ services:
     volumes:
       - ./config/realm-export.json:/opt/keycloak/data/import/realm.json
       - ./keycloak-data:/opt/keycloak/data
+
+volumes:
+  postgres-data:
+  mongo-data:
