--- a/server/version/src/main/resources/application-dev.yaml
+++ b/server/version/src/main/resources/application-dev.yaml
@@ -1,4 +1,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://${VERSION_MONGO_USER}:${VERSION_MONGO_PASSWORD}@${VERSION_MONGO_URL_HOST}:${VERSION_MONGO_URL_PORT}/${VERSION_MONGO_DB_NAME}
+      uri: mongodb://${VERSION_MONGO_USER}:${VERSION_MONGO_PASSWORD}@${VERSION_MONGO_URL_HOST}:${VERSION_MONGO_URL_PORT}/${VERSION_MONGO_DB_NAME}?authSource=${VERSION_MONGO_USER}
