--- a/server/version/src/test/resources/application-test.yml
+++ b/server/version/src/test/resources/application-test.yml
@@ -6,10 +6,7 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto:
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/test
