--- a/genai/env.example
+++ b/genai/env.example
@@ -1,10 +1,14 @@
 # GenAI Recipe Service Environment Configuration
 
 # LLM Configuration
-LLM_MODEL=your_model_here
-LLM_TEMPERATURE=your_temperature_here
 LLM_MODEL=your_llm_model_here
 LLM_TEMPERATURE=temperature_between_0.0_and_1.0
+OPEN_WEBUI_API_KEY=your_api_key_here
+LLM_BASE_URL=your_llm_base_url_here
+
+# Weaviate Configuration
+WEAVIATE_HOST=weaviate
+WEAVIATE_PORT=8080
 
 # Application Configuration
 DEBUG=false
