--- a/helm/weaviate/templates/deployment.yaml
+++ b/helm/weaviate/templates/deployment.yaml
@@ -41,6 +41,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            - name: grpc
+              containerPort: 50051
+              protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
