--- a/helm/weaviate/templates/service.yaml
+++ b/helm/weaviate/templates/service.yaml
@@ -7,13 +7,12 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-    - port: 50051
-      targetPort: grpc
-      protocol: TCP
-      name: grpc
-  selector:
-    {{- include "weaviate.selectorLabels" . | nindent 4 }}
+      - port: {{ .Values.service.port }}
+        targetPort: {{ .Values.container.portName }}
+        protocol: {{ .Values.container.protocol }}
+        name: {{ .Values.container.portName }}
+      - port: {{ .Values.service.grpcPort }}
+        targetPort: grpc
+        protocol: TCP
+        name: grpc
+  selector: {{ - include "weaviate.selectorLabels" . | nindent 4 }}
