--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -164,24 +164,10 @@ services:
             - QUERY_DEFAULTS_LIMIT=25
             - AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED=true
             - PERSISTENCE_DATA_PATH=/var/lib/weaviate
-            - DEFAULT_VECTORIZER_MODULE=none
-            - ENABLE_MODULES=text2vec-transformers
             - CLUSTER_HOSTNAME=node1
             - LOG_LEVEL=info
         volumes:
             - ./weaviate-data:/var/lib/weaviate
-        healthcheck:
-            test:
-                [
-                    "CMD",
-                    "curl",
-                    "-f",
-                    "http://localhost:8080/v1/.well-known/ready",
-                ]
-            interval: 30s
-            timeout: 10s
-            retries: 3
-            start_period: 30s
 
     # ---- GENAI MICROSERVICE ----
     genai:
@@ -190,7 +176,7 @@ services:
             context: ./genai
         restart: always
         ports:
-            - "8085:8000"
+            - "8085:8080"
         env_file:
             - ./.env
         environment:
@@ -203,11 +189,4 @@ services:
             - DEBUG=${DEBUG:-false}
             - LOG_LEVEL=${LOG_LEVEL:-INFO}
         depends_on:
-            weaviate:
-                condition: service_healthy
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-            interval: 30s
-            timeout: 10s
-            retries: 3
-            start_period: 60s
+            - weaviate
