--- a/.github/workflows/recipe-ci-cd.yml
+++ b/.github/workflows/recipe-ci-cd.yml
@@ -38,7 +38,6 @@ jobs:
 
   build:
     name: Build and Push Docker Images
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: test
 
@@ -67,7 +66,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=true
             type=sha
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
@@ -84,7 +83,6 @@ jobs:
 
   deploy:
     name: Deploy to Rancher with Helm
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
 
