--- a/.github/workflows/version-ci-cd.yml
+++ b/.github/workflows/version-ci-cd.yml
@@ -38,6 +38,7 @@ jobs:
 
   build:
     name: Build and Push Docker Images
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: test
 
@@ -83,6 +84,7 @@ jobs:
 
   deploy:
     name: Deploy to Rancher with Helm
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
 
