--- a/.github/workflows/recipe-ci-cd.yml
+++ b/.github/workflows/recipe-ci-cd.yml
@@ -41,6 +41,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
 
+    outputs:
+      image_tag: ${{ steps.export_tag.outputs.image_tag }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -81,6 +84,10 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Export Docker image tag
+        id: export_tag
+        run: echo "image_tag=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT
+
   deploy:
     name: Deploy to Rancher with Helm
     runs-on: ubuntu-latest
@@ -103,4 +110,5 @@ jobs:
         run: |
           helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
             --namespace ${{ env.HELM_NAMESPACE }} \
+            --set image.tag=${{ needs.build.outputs.image_tag }} \
             --wait --timeout 5m
