--- a/helm/client/templates/deployment.yaml
+++ b/helm/client/templates/deployment.yaml
@@ -32,6 +32,10 @@ spec:
             - name: {{ .Values.container.portName }}
               containerPort: {{ .Values.container.port }}
               protocol: {{ .Values.container.protocol }}
+          {{- with .Values.envFrom }}
+          envFrom:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.livenessProbe }}
           {{- with .Values.envFrom }}
           envFrom:
