--- a/helm/weaviate/values.yaml
+++ b/helm/weaviate/values.yaml
@@ -53,7 +53,7 @@ weaviate:
   
   # Vectorizer configuration
   vectorizer:
-    defaultModule: "none"
+    defaultModule: "text2vec-transformers"
   
   # Modules
   modules:
@@ -81,13 +81,18 @@ env:
   - name: PERSISTENCE_DATA_PATH
     value: "/var/lib/weaviate"
   - name: DEFAULT_VECTORIZER_MODULE
-    value: "none"
+    value: "text2vec-transformers"
   - name: ENABLE_MODULES
     value: "text2vec-transformers"
   - name: CLUSTER_HOSTNAME
     value: "node1"
   - name: LOG_LEVEL
     value: "info"
+  - name: TRANSFORMERS_INFERENCE_API
+    valueFrom:
+      configMapKeyRef:
+        name: recipefy-config
+        key: TRANSFORMERS_INFERENCE_API
 
 # Persistent volume
 persistence:
